# IAR-Ant

./: .gitignore  Cargo.toml  README.md  README.pt.md  Trunk.toml  index.html
assets/dataset/: dataset_04.txt  dataset_15.txt
src/: camera.rs  consts.rs  fixed_timestep.rs  inspector.rs  main.rs  simulation.rs
src/dataset/: data.rs  mod.rs
src/diagnostics/: mod.rs  similarity_diagnostic.rs  simulation_time_diagnostic.rs  text.rs  timestep_diagnostic.rs  update_time_diagnostics_plugin.rs
src/simulation/: ant.rs  board.rs  board_position.rs  control.rs  food.rs  info.rs  item.rs  light.rs  mod.rs  step.rs
src/simulation/ant/: ant.rs  mod.rs  prob.rs
src/simulation/board/: board.rs  board_position.rs  cell.rs  ico_sphere.rs  mod.rs
src/simulation/item/: group_colors.rs  item.rs  mod.rs
src/timestep/: control.rs  diagnostic.rs  fixed_timestep.rs  mod.rs
